--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "ionicons": "^6.0.1",
+    "json-server": "^0.17.0",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue-chartjs": "^4.0.7",
